# Simple-G29-CARLA-Adapter

./: README.md  adapter.py  package.xml
g29_adapter/: adapter.py  setup.cfg  setup.py
